--- a/CLASE2.html
+++ b/CLASE2.html
@@ -53,25 +53,19 @@
             margin-bottom: 32px;
             text-align: center;
         }
-        .form {
-            display: flex;
-            flex-direction: column;
-        }
-        .label {
-            font-size: var(--sm);
-            font-weight: bold;
-            margin-bottom: 4px;
-        }
-        .input {
+        .email-image {
+            width: 132px;
+            height: 132px;
+            border-radius: 50%;
             background-color: var(--text-input-field);
-            border: none;
-            border-radius: 8px;
-            height: 30px;
-            font-size: var(--md);
-            padding: 6px;
-            margin-bottom: 12px;
-
+            display: flex;
+            justify-content: center;            
+            align-items: center;
         }
+        .email-image img {
+            width: 80px;
+        }
+
         .primary-button {
             background: var(--hospital-green);
             border-radius: 8px;
@@ -99,19 +93,19 @@
         <div class="form-container">
             <img src="./curso-frontend-developer-practico-main/curso-frontend-developer-practico-main/logos/logo_yard_sale.svg" alt="logo" class="logo">
 
-            <h1 class="tittle">Create a new password</h1>
-            <p class="subtitle">Enter a new password for your acount</p>
+            <h1 class="tittle">Email has been send</h1>
+            <p class="subtitle">Please check your inbox for instruction on how to reset your password</p>
 
-            <form action="/" class="form">
-                <label for="password" class="label">password</label>
-                <input type="password" id="password" placeholder="********" class="input input-password">
-                
-                <label for="new-password" class="label">password</label>
-                <input type="password" id="new-password" placeholder="********" class="input input-password">
+            <div class="email-image">
+                <img src="./curso-frontend-developer-practico-main/curso-frontend-developer-practico-main/icons/email.svg" alt="email">
 
-                <input type="submit" value="Confirm" class="primary-button login-button">
-            </form>
+            </div>
+            <button class="primary-button login-button">login</button>
 
+            <p class="resend">
+                <span>Did not receive the email</span>
+                <a href="/">Resend</a>
+            </p>
         </div>
     </div>
 </body>
