recomienzo del proyecto

--- a/CLASE1.HTML
+++ b/CLASE1.HTML
@@ -92,7 +92,7 @@
                 display: block;
             }
         }
-    </style>di  
+    </style> 
 </head>
 <body>
     <div class="login">
