se creo la pantalla de entrada

--- a/clase3.html
+++ b/clase3.html
@@ -33,7 +33,6 @@
             display: grid;
             grid-template-rows: auto 1fr;
             width: 300px;
-            justify-items: center;
         }
         .logo {
             width: 150px;
@@ -41,48 +40,53 @@
             justify-self: center;
             display: none;
         }
-        .tittle {
-            font-size: var(--lg);
-            margin-bottom: 12px;
-            text-align: center;
-        }
-        .subtitle {
-            color: var(--very-light-pink);
-            font-size: var(--md);
-            font-weight: 300;
-            margin-top: 0;
-            margin-bottom: 32px;
-            text-align: center;
-        }
-        .email-image {
-            width: 132px;
-            height: 132px;
-            border-radius: 50%;
-            background-color: var(--text-input-field);
+        
+        .form {
             display: flex;
-            justify-content: center;            
-            align-items: center;
-            margin-bottom: 24px;
-        }
-        .email-image img {
-            width: 80px;
-        }
-        .resend {
-            font-size: var(--sm);
-        }
-        .resend span {
-            color: var(--very-light-pink);
-        }
-        .resend a {
-            color: var(--hospital-green);
-            text-decoration: none;
+            flex-direction: column;
         }
 
+        .form a {
+            color: var(--hospital-green);
+            font-size: var(sm);
+            text-align: center;
+            text-decoration: none;
+            margin-bottom: 52px;
+        }
+        .label {
+            font-size: var(--sm);
+            font-weight: bold;
+            margin-bottom: 4px;
+        }
+        .input {
+            background-color: var(--text-input-field);
+            border: none;
+            border-radius: 8px;
+            height: 30px;
+            font-size: var(--md);
+            padding: 6px;
+            margin-bottom: 12px;
+
+        }
+        .input-email {
+            margin-bottom: 22px;
+        }
         .primary-button {
             background: var(--hospital-green);
             border-radius: 8px;
             border: none;
             color: var(--white);
+            width: 100%;
+            cursor: pointer;
+            font-size: var(--md);
+            font-weight: bold;
+            height: 50px;
+        }
+        .secondary-button {
+            background: var(--white);
+            border-radius: 8px;
+            border: 1px solid var(--hospital-green);
+            color: var(--hospital-green);
             width: 100%;
             cursor: pointer;
             font-size: var(--md);
@@ -98,26 +102,26 @@
                 display: block;
             }
         }
-    </style>
+    </style> 
 </head>
 <body>
     <div class="login">
         <div class="form-container">
             <img src="./curso-frontend-developer-practico-main/curso-frontend-developer-practico-main/logos/logo_yard_sale.svg" alt="logo" class="logo">
 
-            <h1 class="tittle">Email has been send</h1>
-            <p class="subtitle">Please check your inbox for instruction on how to reset your password</p>
+            <form action="/" class="form">
+                <label for="email" class="label">Email address</label>
+                <input type="text" id="email" placeholder="ejemplo@gmail.com" class="input input-password">
+                
+                <label for="password" class="label">password</label>
+                <input type="password" id="password" placeholder="********" class="input input-password">
 
-            <div class="email-image">
-                <img src="./curso-frontend-developer-practico-main/curso-frontend-developer-practico-main/icons/email.svg" alt="email">
+                <input type="submit" value="log in" class="primary-button login-button">
+                <a href="/">forgot my password</a>
+            </form>
 
-            </div>
-            <button class="primary-button login-button">login</button>
+            <button class="secondary-button singnup-button">Sing up</button>
 
-            <p class="resend">
-                <span>Did not receive the email</span>
-                <a href="/">Resend</a>
-            </p>
         </div>
     </div>
 </body>
