--- a/clase11.html
+++ b/clase11.html
@@ -27,6 +27,7 @@
             display: flex;
             justify-content: space-between;
             padding: 0 24px;
+            border-bottom: 1px solid var(--very-light-pink);
         }
         .menu {
             display: none;
@@ -41,6 +42,7 @@
             margin: 0;
             display: flex;
             align-items: center;
+            height: 60px;
         }
         .navbar-left {
             display: flex;
@@ -67,18 +69,36 @@
         .navbar-email {
             color: var(--very-light-pink);
             font-size: var(--sm);
+            margin-right: 12px;
         }
         .navbar-shopping-cart {
             position: relative;
         }
         .navbar-shopping-cart div {
-            width: 8px;
-            height: 8px;
+            width: 16px;
+            height: 16px;
             background-color: var(--hospital-green);
             border-radius: 50px;
             font-size: var(--sm);
             font-weight: bold;
+            position: absolute;
+            top: -6px;
+            right: -3px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
+        }
+        @media (max-width: 640px) {
+            .menu {
+                display: block;
+            }
+            .navbar-left ul {
+                display: none;
+            }
+            .navbar-email {
+                display: none;
+            }
         }
     </style>
 </head>
